# cron-job

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yaml
.github/workflows/: continuous-rust.yaml  publish.yaml  rust.yml
src/: cronjob.rs  job.rs  lib.rs
tests/: integration.rs
