[package]
name = "cron-job"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A cronjob implementation using the cron scheduler"
readme = "README.md"
repository = "https://github.com/nambrosini/cron-job/"
keywords = ["cron", "cronjob", "cronjobs"]
categories = ["cronjob", "cronjobs"]

[dependencies]
chrono = "0.4.31"
cron = "0.12.0"
