[package]
name = "cron-job"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "A cronjob implementation using the cron scheduler"
readme = "README.md"
repository = "https://github.com/nambrosini/cron-job/"
keywords = ["cron", "cronjob", "cronjobs"]

[dependencies]
chrono = "0.4.41"
cron = "0.15.0"
